Changelog for Shake

    Improve the error message when failing to build with *>> or ?>>
    Introduce a portable flag, to switch to portable FileTime ops
    Improve the error message when failing to build a file
    Ensure errors raised bubble up quickly
    Significant improvements to the profile output
    Only trace the program name by default, not the entire command
    Allow unordered-containers < 0.2 again
    Intern all keys, so they are only stored once
    Optimise modification time checking on Unix
    Optimise modification time checking on Windows
    Make some fields smaller on disk
    IMPORTANT: Incompatible on disk format change
    Switch to ByteString for storing File
    Add shakeDeterministic, along with a default random pool
    Make the Monad/Monoid instance for Rules strict
0.3
    #550, ensure the journal thread is locked
    #550, if your thread dies while reading the database then die
    #550, ensure you reset to before the slop before writing
    If the witness table is completely corrupt give a better error
    Make storage work with exceptions whose messages raise errors
    Journal error conditions, to ensure they don't repeat
    Better messages on invalid database versions
    Complete rewrite of the storage layer and journal design
    IMPORTANT: Incompatible on disk format change
0.2.11
    IMPORTANT: #546, don't save the database to where it was created
0.2.10
    Add systemCwd for running with a particular current directory
    Ensure the database is saved to where it was created
    #545, make sure if shake is killed, it kills its children
0.2.9
    Require unordered-containers 2.1 or higher, fixes bugs
    Allow transformers-0.3.*
    Add a random script generator and tester
    Improve the documentation for withResource
    Fix the unordered-containers constraint, was too loose
    Don't write report generation messages in Quiet mode
    Add ?>> operator, a generalisation of *>>
0.2.8
    Rename shakeDump to shakeReport